Fixed z-index issue on Element Group "Edit Link" option > https://incsub.slack.com/archives/ufp/p1470635582000390

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -16930,6 +16930,9 @@ div.preset-manager-panel .checkbox-tooltip {
   position: static;
   top: 0px; }
 
+.upfront-inline-panel-item.group-link-control {
+  z-index: 51; }
+
 /**
  * Compatibility issue nag popup, v1 check
  */
